# tawasco

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  cache.c  v1.c
.github/actions/install-rust/: action.yml
.github/workflows/: build_docker_images.yml  ci.yml  ci_host_based.yml  ci_host_based_sequential.yml  ci_stacking.yml  ci_wasmtime.yml
C/: Makefile  v1.c
experiments/: README.md
experiments/jobs/: mitigate_wbc.3000.yml  mitigate_wbc.4000.yml  mitigate_wbc.yml  mutate.yml
experiments/jobs/defensive_diversity/: mitigate_ct.yml  mitigate_wbc.4000.yml
experiments/jobs/static_diversity/: compare_static_programs.yml  mutate.yml
experiments/kube/: config.yaml  deploy.sh  install.yaml  minio.yaml  roles.yaml
experiments/scripts/: index.js
experiments/scripts/metrics/BER/: ches2016_BER.py
experiments/scripts/metrics/cache_timing/: estimate_stride.py
experiments/scripts/metrics/meta/: check_db.py  create_db.py  crow_original_rq1.json  rq1.py  schema.py  template.py
experiments/scripts/plotting/: latexify.py
experiments/wasms/: RADME.md
host/: Cargo.toml  plot.py
host/benches/eviction/: main.rs
host/src/: main.rs
host_based/C/: Makefile  line_size  line_size.c  v1.c
host_based/host/: Cargo.toml  plot.py
host_based/host/benches/eviction/: main.rs
host_based/host/src/: lib.rs  main.rs  valgrind.c
host_based/host_single/: Cargo.toml  build.rs
host_based/host_single/src/: main.rs  valgrind.c
host_based/plots/: plot_latencies.py
host_based/rustctre/: Cargo.toml  Makefile  change_stride.py  estimate_stride.py  test.sh
host_based/rustctre/src/: attacker.rs  cache_time_predictor.rs  eviction.rs  lib.rs  spectre.rs  spectre_wasm.rs  spectre_wasm_sync_simulated.rs  spectre_wasm_sync_simulated2.rs  victim.rs  victim_eviction.rs  victim_speculative.rs
host_based/stacking/: Cargo.toml
host_based/stacking/src/: main.rs
host_based/stacking/tests/: generate_1M_inputs.py  input.sh  wb_challenge.wasm
metrics/BER/: BER.py  kryptologic_BER.py
plots/: pyproject.toml
rustctre/: Cargo.toml  Makefile  test.sh  test_spectre.sh
rustctre/src/: cache_time_predictor.rs  eviction.rs  lib.rs  main.rs  spectre_wasm.rs  spectre_wasm_sync_simulated.rs
wbc/ches2016/: Makefile  trace_it.py  wb_challenge
wbc/kryptologic/: Makefile  kryptologic.wasm  trace_it.py
wbc/mem_test/: Makefile  download_wasi_sdk.sh  f1.c  mem_test.wasm
