[package]
name = "reproduction"
version = "0.0.1"
publish = false
description = "Spectre in Wasm replication, but, written in Rust"
edition = "2021"
authors = ["Jacarte <jacarte9212@gmail.com>"]

[features]
default = ["small"]
# enable this to generate a python file with latency samples
tracing = []
small = []
medium = []
large = []
extra = []

[[bin]]
name = "eviction"
path = "src/eviction.rs"

[[bin]]
name = "sp"
path = "src/spectre_wasm.rs"

#[[bin]]
#name = "spectre"
#path = "src/spectre.rs"



#[profile.release]
# opt-level = 1
# debug = true
#debug-assertions = false
#overflow-checks = false
#lto = false
#panic = 'unwind'
#incremental = false
#codegen-units = 16
#rpath = false
