[package]
name = "host"
version = "0.0.1"
publish = false
description = "Host of the attacker and victim Wasm binaries"
edition = "2021"
authors = ["Jacarte <jacarte9212@gmail.com>"]


# wasmtime as a dep
[dependencies]
wasmtime = { path = "../../wasmtime/crates/wasmtime", default-features = false, features = ['cranelift'] }
wasmtime-wasi = { path = "../../wasmtime/crates/wasi" }
wasmtime-jit = { path = "../../wasmtime/crates/jit" }
libc = "0.2"
rustix = "0.37.13"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
# byte Error Rate
name = "eviction"
harness = false


[build-dependencies]
cc = "1.0"

[features]
default = ["interactive"]
# Interact with PIN to trace the execution of binaries
traces = []
interactive = []
# Sequential to execute one after the other
sequential = []
parallel = []