[package]
name = "host_single"
version = "0.0.1"
publish = false
description = "Opens and executes a wasm binary. Instrument the generated machine code with a valgrind call"
edition = "2021"
authors = ["Jacarte <jacarte9212@gmail.com>"]

[build-dependencies]
cc = "1.0"

# wasmtime as a dep
[dependencies]
wasmtime = { path = "../../wasmtime/crates/wasmtime" }
wasmtime-wasi = { path = "../../wasmtime/crates/wasi" }
wasmtime-jit = { path = "../../wasmtime/crates/jit" }
libc = "0.2"
rustix = "0.37.13"
clap = { version = "4.0.0", features = ["derive"] }
